# claude-agent-auditor

./: .gitignore  README.md  pyproject.toml
agent_auditor/: __init__.py  app_report.py  app_scanner.py  cli.py  report.py  scanner.py
